# my_projects

./: CMakeLists.txt  README.md  h_stek.cpp
Katynsus Sasha/: Queue.cpp  intelligent_queue.cpp
Kurdyumov Dima/: Stack  fifo.cpp  lifo.cpp  zachet.cpp
